fixed extra spacing on right side

--- a/styles.scss
+++ b/styles.scss
@@ -1,13 +1,14 @@
-html {
-	width: 100%;
-}
+
 
 body {
 	background-color: #7da6ad;
 	background-image: url(http://www.transparenttextures.com/patterns/brick-wall.png);
 	font-family: 'american typewriter';
-	margin: 0px;
 	width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 header {
